# Yuzuriha-Rin

./: .gitignore  IMPLEMENTS.md  LICENSE  README.md  TROUBLESHOOTING.md  pyproject.toml  run.py  run_debug.py  test_server.py  test_websocket_connection.py
assets/configs/: image_descriptions.json
data/: image_alter.json  messages.db  test_messages.db
frontend/: app.js  chat.js  chat_ws.js  chat_ws_v2.js  index.html
frontend/scripts/core/: api.js  appCore.js  types.js
frontend/scripts/ui/: avatarEditor.js  emotionTheme.js  modal.js
frontend/scripts/views/: chatView.js  sessionList.js
frontend/styles/: styles.css
notebooks/: test.ipynb
src/: config.py
src/api/: llm_client.py  main.py  routes.py  schemas.py  ws_routes.py
src/behavior/: coordinator.py  emotion.py  models.py  pause.py  segmenter.py  timeline.py  typo.py
src/core/config/: settings.py
src/core/models/: character.py
src/frontend/scripts/views/: sessionList.js
src/infrastructure/database/: connection.py
src/message_server/: __init__.py  database.py  models.py  service.py  websocket.py
src/rin_client/: __init__.py  client.py
src/services/ai/: llm_client.py  rin_client.py
src/services/behavior/: coordinator.py  models.py  sticker.py  timeline.py
src/services/character/: character_service.py
src/services/session/: session_client.py  session_service.py
src/services/tools/: tool_service.py
src/utils/: config.py  image_alter.py  image_descriptions.py
tests/: run_all_tests.py  test_behavior_system.py  test_character_update.py  test_config.py  test_database.py  test_image_alter.py  test_image_descriptions.py  test_integration.py  test_message_service.py  test_typo_injector.py  test_websocket_manager.py  verify_character_update.py
tools/sticker_manager/: sticker_manager.py
(+1 files in other folders)
