[project]
name = "rie-kugimiya"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.4.1",
    "fastapi>=0.124.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "jupyterlab>=4.5.0",
    "numpy>=1.26.4",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pywebview>=6.1",
    "scikit-learn>=1.7.2",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]
torchaudio = [{ index = "pytorch-cu124" }]
