[project]
name = "yuzuriha-rin"
version = "0.1.0"
description = "Virtual character dialogue system with rule-based behavior engine for natural messaging patterns"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "fastapi>=0.124.0",
    "hf-xet>=1.2.0",
    "httpx>=0.28.1",
    "jieba>=0.42.1",
    "jinja2>=3.1.6",
    "jupyterlab>=4.5.0",
    "numpy>=1.26.4",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pypinyin>=0.55.0",
    "pytest>=9.0.2",
    "pywebview>=6.1",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "uvicorn[standard]>=0.38.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]
torchaudio = [{ index = "pytorch-cu130" }]
